--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="aspect ratio checker">
+		<meta name="description" content="photo prints">
 		<meta name="keywords" content="">
 		<meta name="author" content="james rock">
 		<meta content="initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
