--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 		<meta name="author" content="james rock">
 		<meta content="initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
 		<title>photoprints</title>
+		<link href="http://photoratios.jamesrock.me/css/photoratios.css" rel="stylesheet">
 		<link href="/css/photoprints.css" rel="stylesheet">
 		<link href="http://img.jamesrock.me/favicon/128.png" rel="icon" type="image/png">
 	</head>
 	<body>
 		<div id="app"></div>
 		<script src="http://js.jamesrock.me/ROCK-9.0.js"></script>
+		<script src="http://photoratios.jamesrock.me/js/data.js"></script>
 		<script src="/js/photoprints.js"></script>
 	</body>
 </html>
