--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<div id="app"></div>
 		<script src="http://js.jamesrock.me/ROCK-9.0.js"></script>
 		<script src="http://photoratios.jamesrock.me/js/data.js"></script>
+		<script src="/js/data.js"></script>
+		<script src="/js/ui.js"></script>
 		<script src="/js/photoprints.js"></script>
 	</body>
 </html>
